# PocketHHE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  output.txt  python_requirements.txt  start.sh
configs/: config.cpp  config.h
data/SpO2/: BinaryOutput_SpO2.txt  BinaryOutput_SpO2_cleaned4%.txt  SpO2_output_cleaned4%.csv  data_processing.ipynb
data/fashion-mnist/: data-exploration.ipynb
data/fashion_mnist/: data_inspecting.ipynb
data/fmnist/: data-exploration.ipynb
data/hypnogram/: data_exploration.ipynb  hypnogram_output.csv  hypnogram_output_test.csv  hypnogram_output_train.csv
data/mit-bih/: mitbih_processing.ipynb  mitbih_to_csv.ipynb
data/mit-bih/csv/: mitbih_balanced_bin_y_test.csv  mitbih_balanced_bin_y_train.csv  mitbih_binary_y_test.csv  mitbih_binary_y_train.csv
data/mnist/: data_inspecting.ipynb
data/sleep/: SpO2_output.csv  data_exploration.ipynb
libs/pocketnn/: CMakeLists.txt
libs/pocketnn/include/pocketnn/: pktnn.h  pktnn_actv.h  pktnn_consts.h  pktnn_fc.h  pktnn_layer.h  pktnn_loader.h  pktnn_mat.h
libs/pocketnn/src/: pktnn_actv.cpp  pktnn_fc.cpp  pktnn_loader.cpp  pktnn_mat.cpp
libs/seal/lib/pkgconfig/: seal.pc
notebooks/: SpO2.ipynb  SpO2_QAT.ipynb  SpO2_hhe.ipynb  SpO2_inference.ipynb  SpO2_qat.ipynb  float_balanced_mitbih.ipynb  float_fashion_mnist.ipynb  float_mit_bih.ipynb  float_mitbih.ipynb  hypnogram.ipynb  mit_bih.ipynb  mnist_fc_inference.ipynb  mnist_hhe.ipynb  mnist_hhe_plain.ipynb  mnist_quant_fc_inference.ipynb  square_nn_quant.th
notebooks/mit_bih/: mit_bih.ipynb
qat/: README.md
qat/notebooks/: fmnist_fc_inference.ipynb  fmnist_fc_train.ipynb  mnist_conv_inference.ipynb  mnist_conv_train.ipynb  mnist_fc_inference.ipynb  mnist_fc_train.ipynb
qat/src/: export_weights_mnist_py.py
qat/weights/: hcnn_mnist_plain.pth  quant_fc_2bits_fmnist_plain_2bits_weights.pth  quant_fc_2bits_mnist_plain_2bits_weights.pth  quant_hcnn_discretefloat_mnist_plain_8bits_weights.pth
quant_he_code/: LICENSE  README.md  export_weights_mnist.ipynb  mnist.ipynb  plaintext_training.txt  quant_weights_8bits.py  requirements.txt  speedtest_he_mnist_works.ipynb
quant_he_code/notebooks/: export_weights_mnist.ipynb  fmnist_fc_inference.ipynb  mnist.ipynb  mnist_conv_inference.ipynb  mnist_fc.ipynb  mnist_fc_inference.ipynb  mnist_inference.ipynb  speedtest_he_mnist_works.ipynb
quant_he_code/src/: mnist.py  speedtest_he_mnist_works.py
quant_he_code/weights/: float_weights.py  quant_fc_2bits_mnist_plain_4bits_weights.pth  quant_hcnn_2bits_mnist_plain_4bits_weights.pth  quant_hcnn_4bits_mnist_plain_4bits.pth  quant_hcnn_mnist_plain_4bits.pth  quant_weights_16bits.py
src/: experimentals.h  main.cpp  pktnn_examples.cpp  pktnn_examples.h
src/examples/: .hhe_pktnn_examples.cpp.swp  hhe_pktnn_examples.cpp  hhe_pktnn_examples.h  pktnn_examples.cpp  pktnn_examples.h  quantization.cpp  quantization.h
src/pasta/: Cipher.h  SEAL_Cipher.cpp  SEAL_Cipher.h  pasta_3_plain.cpp  pasta_3_plain.h  pasta_3_seal.cpp  pasta_3_seal.h
src/util/: checks.h  matrix.h  pastahelper.cpp  pastahelper.h  sealhelper.cpp  sealhelper.h  utils.cpp  utils.h
tests/: ecg_tests.cpp  ecg_tests.h  mnist_tests.cpp  mnist_tests.h
weights/: fc1_bias.csv  fc1_weight.csv  fc2_bias.csv  fc2_weight.csv  fcLast_weight.csv
weights/1_layer/: fc1_weight_20epochs.csv  fc1_weight_50epochs.csv
weights/3_layer/: fcLast_bias.csv
weights/SpO2/1fc/float/: lc_model_scaled_hypnogram_500epoch.pt
weights/SpO2/1fc/int/: fc1_weight_100epochs_bz4_clamp1024.csv  fc1_weight_100epochs_bz4_clamp2048.csv
weights/SpO2/lr_model/int/: fc1_bias_100epochs_bs4_clamp1024.csv  (+1 more)
weights/SpO2/qat/: quant_fc_5bits_data_2bits_weights.csv  quant_fc_5bits_data_2bits_weights.pth  quant_fc_5bits_data_3bits_weights.pth  quant_fc_5bits_data_8bits_weights.pth
weights/SpO2/square_nn/: square_model_scaled_hypnogram_1000epoch.pt
weights/ecg/: .~lock.fc1_weight_50epochs_bz4.csv#  fc1_bias_100epochs.csv
weights/ecg/ecg_4096/: fc1_weight_50epochs_bz4.csv
weights/ecg/ecg_512/: fc1_bias_50epochs_bs4.csv  fc1_weight_50epochs_bz4.csv
weights/ecg/ecg_8192/: fc1_bias_50epochs_bs4.csv  fc1_weight_50epochs_bz4.csv
weights/ecg/ecg_float/: lr_model_epoch500_lr1e-3.pt
weights/ecg_2048/: fc1_bias_50epochs_bs4.csv  fc1_weight_50epochs_bz4.csv
weights/fashion_mnist/: fc1_bias_200epochs_bs64_clamp128.csv  fc1_weight_200epochs_bs64_clamp128.csv
weights/hypnogram/float/: lc_model_scaled_hypnogram_1000epoch.pt
weights/mnist/: fc1_weight_50epochs_bz4_weightClamp256.csv
weights/mnist/1_layer/: fc1_bias_50epochs_bs4_clamp128.csv  fc1_bias_50epochs_bs4_weightClamp256.csv  fc1_weight_50epochs_bs4_clamp128.csv
weights/mnist/qat/: quant_2fc_2bits_mnist_plain_2bits_weights_fc1.csv  quant_2fc_2bits_mnist_plain_2bits_weights_fc2.csv  quant_2fc_2bits_mnist_plain_4bits_weights.pth  quant_fc_2bits_mnist_plain_3bits_weights.pth
(+10 files in other folders)
